kubernetes/bot-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bot
  template:
    metadata:
      labels:
        app: bot
    spec:
      containers:
        - name: bot
          image: bklinowski/ctf-bot
          resources:
            requests:
              memory: "250Mi"
              cpu: "250m"
            limits:
              memory: "500Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
