kubernetes/db-deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
spec:
  selector:
    matchLabels:
      database: postgresql
  serviceName: db
  replicas: 2
  template:
    metadata:
      labels:
        database: postgresql
    spec:
      containers:
        - name: database
          image: postgres
          ports:
            - containerPort: 5432
              name: database
          volumeMounts:
            - name: pg-volume
              mountPath: /var/lib/postgresql
      volumes:
        - name: pg-volume
          persistentVolumeClaim:
            claimName: dbpvc
