kubernetes/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  type: ClusterIP
  selector:
    database: postgresql
  ports:
    - port: 5432
      targetPort: 5432
