kubernetes/php-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php
spec:
  type: ClusterIP
  selector:
    app: php
  ports:
    - port: 1234
      targetPort: 1234
